# django-model-revisioning

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py  tox.ini
.github/: dependabot.yml
doc_brown/: __init__.py  admin.py  base.py  managers.py  models.py  options.py  querysets.py  signals.py  utils.py
doc_brown/management/commands/: graph_revision.py
doc_brown/models/: __init__.py  single_table.py  two_tables.py
doc_brown/templates/doc_brown/: change_form.html  revisions.html
doc_brown/templatetags/: doc_brown_tags.py
docs/: Makefile
docs/source/: admin.rst  api.rst  conf.py  index.rst  management.rst  options.rst  revision_types.rst  signals.rst
model_history/: admin.py  base.py  fields.py  models.py  options.py
model_history/management/commands/: graph_revision.py
model_history/templates/doc_brown/: change_form.html  revisions.html
model_history/templates/model_history/: revisions.html
model_history/templatetags/: doc_brown_tags.py
model_revisioning/: admin.py  base.py  fields.py  managers.py  models.py  options.py  signals.py
model_revisioning/management/commands/: graph_revision.py
model_revisioning/templates/model_revisioning/: revisions.html
model_revisioning/templatetags/: model_history_tags.py  model_revisioning_tags.py
requirements/: base.txt  dev.txt  docs.txt
testproject/project/: settings.py  urls.py  wsgi.py
testproject/testapp/: admin.py  models.py
testproject/testapp/migrations/: 0001_initial.py
testproject/testproject/: settings.py  urls.py  wsgi.py
testproject/tests/: test_revisionmodel.py
