[tool.poetry]
name = "django-model-history"
version = "0.0.1"
description = "Version control for django models."
authors = ["Vidir Valberg Gudmundsson <valberg@orn.li>"]
packages = [
    { include = "model_history" }
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
coverage = "^4.5"
pytest = "^5.2"
pytest-django = "^3.5"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
pytest-cov = "^2.8"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
