[tool.poetry]
name = "django-model-revisioning"
version = "0.0.1a3"
description = "Version control for django models."
authors = ["Vidir Valberg Gudmundsson <valberg@orn.li>"]
packages = [
    { include = "model_revisioning" }
]
repository = "https://github.com/valberg/django-model-revisioning"
documentation = "https://django-model-revisioning.readthedocs.io"
readme = "README.rst"
license = "GPL-3.0+"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2,<4.0"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
coverage = "^4.5"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-django = "^3.7"
sphinx = "^3.0"
sphinx-rtd-theme = "^0.4.3"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
